--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+/* 
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -23,4 +29,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
